--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "owl_http",
-  "version": "1.0.2",
+  "name": "owl888",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
